# designpatternsheeet

./: .dockerignore  .gitignore  Dockerfile  README.md  README.rst  docker-compose.yml
hello_world/: CMakeLists.txt  main.cpp
notes/overview/: README.rst
notes/overview/app/: CMakeLists.txt
notes/overview/app/dependency_inversion_principle/: CMakeLists.txt  main.cpp
notes/overview/app/interface_segregation_principle/: CMakeLists.txt  main.cpp
notes/overview/app/liskov_substitution_principle/: CMakeLists.txt  main.cpp
notes/overview/app/open_closed_principle/: CMakeLists.txt  main.cpp
notes/overview/app/single_responsibility_principle/: CMakeLists.txt  main.cpp
notes/overview/mylibrary/: CMakeLists.txt
notes/overview/mylibrary/CMake/: OverviewConfig.cmake.in
notes/overview/mylibrary/include/: Journal.h  Machine.h  PersistenceManager.h  Product.h  Temperature.h
notes/overview/mylibrary/src/: Journal.cpp
notes/overview/mylibrary/test/: CMakeLists.txt  main.cpp
notes/p_behavioral/: README.rst
notes/p_creational/: README.rst
notes/p_creational/app/: CMakeLists.txt
notes/p_creational/app/abstract_factory/: CMakeLists.txt  main.cpp
notes/p_creational/app/builder/: main.cpp
notes/p_creational/mylibrary/CMake/: CreationalConfig.cmake.in
notes/p_creational/mylibrary/include/: abstract_factory.h  inner_factory.h
notes/p_creational/mylibrary/include/builder/: builder.h
notes/p_creational/mylibrary/include/factory/: factory_method.h  inner_factory.h
notes/p_creational/mylibrary/include/prototype/: prototype.h  prototype_serialize.h
notes/p_creational/mylibrary/include/singleton/: singleton.h
notes/p_creational/mylibrary/src/: Journal.cpp
notes/p_creational/mylibrary/test/: CMakeLists.txt  main.cpp
notes/p_structural/: README.rst
notes/p_structural/app/: CMakeLists.txt
notes/p_structural/app/builder/: CMakeLists.txt
notes/p_structural/app/factory/: CMakeLists.txt  main.cpp
notes/p_structural/app/prototype/: CMakeLists.txt  main.cpp
notes/p_structural/mylibrary/: CMakeLists.txt
notes/p_structural/mylibrary/CMake/: StructuralConfig.cmake.in
notes/p_structural/mylibrary/include/: Journal.h
notes/p_structural/mylibrary/include/adapter/: adapter.h
notes/p_structural/mylibrary/test/: CMakeLists.txt
sandbox/: README.rst
sandbox/aws/: README.rst  aws.env
sandbox/aws/encryption/: README.rst
sandbox/aws/encryption/app/: CMakeLists.txt  main.cpp
sandbox/aws/encryption/terraform/: main.tf  secret.tfvars  variables.tf
sandbox/aws/lambda/: README.rst
sandbox/aws/lambda/app/: CMakeLists.txt  main.cpp
sandbox/aws/lambda/app/app/: main.cpp
sandbox/aws/lambda/app/include/: AwsDemo.h  AwsDemoBuilder.h  AwsDemoS3Builder.h  AwsDemoSnsBuilder.h  AwsDemoSqsBuilder.h  utils.h
sandbox/aws/lambda/app/src/: AwsDemo.cpp  AwsDemoBuilder.cpp  AwsDemoS3Builder.cpp  AwsDemoSnsBuilder.cpp  AwsDemoSqsBuilder.cpp
sandbox/aws/lambda/lambda_function/: CMakeLists.txt  main.cpp
sandbox/aws/lambda/terraform/: greet_lambda.py  main.tf  outputs.tf  variables.tf
sandbox/aws/server-side-encryption/: README.rst
sandbox/aws/server-side-encryption/app/: CMakeLists.txt
sandbox/aws/server-side-encryption/terraform/: main.tf  terraform.tfvars
sandbox/cmake_tools/: PrintVariables.cmake
sandbox/encryption/: CMakeLists.txt  main.cpp
sandbox/encryption/app/: CMakeLists.txt  main.cpp
sandbox/tutorial/: CMakeLists.txt
